@@ -209,6 +209,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1666: union onschema fails when the input relation has cast from bytearray to another type (thejas)
+
 PIG-1655: code duplicated for udfs that were moved from piggybank to builtin (nrai via daijy)
 
 PIG-1670: pig throws ExecException in stead of FrontEnd exception when the plan validation fails (nrai via daijy)
